Letter spacings fixed to 0.1em in most places in style.css

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1222,7 +1222,7 @@ a.btn-mod:focus{
 	font-weight: 400;
     line-height: 1.2;
 	text-transform: uppercase;
-	letter-spacing: 0.32em;
+	letter-spacing: 0.1em;
 	opacity: .85;
 }
 .hs-line-6{
@@ -1250,7 +1250,7 @@ a.btn-mod:focus{
     position: relative;
 	font-size: 16px;
 	font-weight: 400;
-    letter-spacing: 0.2em;
+    letter-spacing: 0.1em;
     line-height: 1.2;
     opacity: .75;
 }
@@ -1308,7 +1308,7 @@ a.btn-mod:focus{
 	font-weight: 400;
     line-height: 1.2;
 	text-transform: uppercase;
-	letter-spacing: 0.4em;
+	letter-spacing: 0.1em;
 }
 .hs-line-13{
     margin-top: 0;
@@ -1317,7 +1317,7 @@ a.btn-mod:focus{
 	font-weight: 400;
     line-height: 1;
 	text-transform: uppercase;
-	letter-spacing: 0.3em;
+	letter-spacing: 0.1em;
 }
 .hs-line-14{
     margin-top: 0;
@@ -1326,7 +1326,7 @@ a.btn-mod:focus{
 	font-weight: 400;
     line-height: 1.4;
 	text-transform: uppercase;
-	letter-spacing: 0.3em;
+	letter-spacing: 0.1em;
 }
 .hs-line-15{
     margin-top: 0;
@@ -1334,7 +1334,7 @@ a.btn-mod:focus{
     font-size: 36px;
     font-weight: 400;
     text-transform: uppercase;
-    letter-spacing: 0.2em;
+    letter-spacing: 0.1em;
     line-height: 1.3;
 }
 .no-transp{
@@ -1472,7 +1472,7 @@ a.logo:hover{
 	font-size: 18px;
 	font-weight: 400 !important;
 	text-transform: uppercase;
-    letter-spacing: 0.2em;
+  letter-spacing: 0.1em;
 	text-decoration: none;
 	color: rgba(0,0,0, .9);
 }
@@ -2682,7 +2682,7 @@ a.logo:hover{
     color: #999;
     font-size: 11px;
     font-weight: 400;
-    letter-spacing: 0.4em;
+    letter-spacing: 0.1em;
     text-decoration: none;
     
     -webkit-transition: all 0.27s cubic-bezier(0.000, 0.000, 0.580, 1.000);  
@@ -2706,7 +2706,7 @@ a.logo:hover{
     font-weight: 400;
     text-transform: uppercase;
     text-align: center;
-    letter-spacing: 0.5em;
+    letter-spacing: 0.1em;
     line-height: 1.3;
 }
 .section-line{
@@ -2995,13 +2995,13 @@ a.logo:hover{
     margin-top: 23px;
     font-size: 15px;
     text-transform: uppercase;
-    letter-spacing: 0.4em;
+    letter-spacing: 0.1em;
 }
 .team-item-role{
 	margin-top: 4px;
 	font-size: 12px;
 	text-transform: uppercase;
-    letter-spacing: 0.4em;
+    letter-spacing: 0.1em;
     color: #aaa;
 }
 .team-social-links{
@@ -3282,7 +3282,7 @@ a.logo:hover{
 	font-size: 13px;
 	text-transform: uppercase;
 	text-align: center;
-	letter-spacing: 0.2em;
+	letter-spacing: 0.1em;
 	color: #555;
 	cursor: default;
 }
@@ -3681,7 +3681,7 @@ a.logo:hover{
 	margin-bottom: 20px;
 	font-size: 18px;
 	font-weight: 300;
-    letter-spacing: 0.3em;
+    letter-spacing: 0.1em;
 	text-transform: uppercase;
 	color: rgba(255,255,255, 0.9);
 }
@@ -3786,7 +3786,7 @@ a.logo:hover{
     margin-bottom: 6px;
     font-size: 15px;
     text-transform: uppercase;
-    letter-spacing: 0.2em;
+    letter-spacing: 0.1em;
 }
 .post-prev-title a{
     color: #777;
@@ -3836,7 +3836,7 @@ a.logo:hover{
     font-size: 16px;
     font-weight: 400;
     text-transform: uppercase;
-    letter-spacing: 0.3em;
+    letter-spacing: 0.1em;
 }
 .form input.newsletter-field{
     max-width: 293px;
@@ -3943,7 +3943,7 @@ a.logo:hover{
     font-size: 12px;
     font-weight: 400;
     text-transform: uppercase;
-    letter-spacing: 0.3em;
+    letter-spacing: 0.1em;
 }
 .ci-text{
     font-size: 15px;
@@ -4062,7 +4062,7 @@ a.logo:hover{
     margin-left: 12px;
     font-size: 16px;
     text-transform: uppercase;
-    letter-spacing: 0.3em;
+    letter-spacing: 0.1em;
     color: rgba(255,255,255, .75);
 }
 .mt-close{
@@ -4112,7 +4112,7 @@ a.logo:hover{
 .footer-copy{
     margin-bottom: 5px;
     text-transform: uppercase;
-    letter-spacing: 0.2em;
+    letter-spacing: 0.1em;
 }
 .footer-made{
     font-size: 11px;
@@ -5142,7 +5142,7 @@ section:hover .small-item-carousel .owl-next{
 	font-weight: 400;
 	text-transform: uppercase;
 	text-align: center;
-	letter-spacing: 0.4em;	
+	letter-spacing: 0.1em;	
 	border: none;
 }
 .tpl-alt-tabs > li{
@@ -5234,7 +5234,7 @@ section:hover .small-item-carousel .owl-next{
 	font-size: 12px;
 	font-weight: 400;
 	text-transform: uppercase;
-	letter-spacing: 0.2em;
+	letter-spacing: 0.1em;
 }
 .accordion > dt > a{
 	display: block;
